--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 
 
 spring.mail.host=smtp.gmail.com
+spring.mail.port=587
 spring.mail.username=rkubasev39@gmail.com
 spring.mail.password=phaz mooh yqyg fllp
 spring.mail.properties.mail.smtp.auth=true
