--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=messenger
 
 
-spring.datasource.url = jdbc:mariadb://localhost:3306/messenger
-spring.datasource.username = rus
-spring.datasource.password = rus123lan
+spring.datasource.url = jdbc:mariadb://localhost:3306/????????_??
+spring.datasource.username = ????????
+spring.datasource.password = ??????
 spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -20,7 +20,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rkubasev39@gmail.com
-spring.mail.password=phaz mooh yqyg fllp
+spring.mail.username=??? ?????
+spring.mail.password=?????? ??????????(?????????)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
